# cbanalysis

./: README.md  environment.yml  pyproject.toml
config/: cbefficiency.yaml  cbprocess.yaml  cbspec.yaml
src/cbanalysis/: __init__.py
src/cbanalysis/pipelines/cbefficiency/: __init__.py  cli.py  efficiency.py
src/cbanalysis/pipelines/cbprocess/: __init__.py  cli.py  main.py  process_data.py
src/cbanalysis/pipelines/cbspec/: cli.py  main.py
src/cbanalysis/utils/: __init__.py  binning.py  constants.py  data_classes.py  load_config.py  logging_utils.py  output_utils.py  plotting.py
